2013-12-20  Anton Kolesov  <anton.kolesov@synopsys.com>

	* arc-init.sh: Remove extra bashbang.
	* build-all.sh: Ensure that option --sed-tool will be used.

2013-12-17  Fernando Ortiz <dev@nandub.info>

	* arc-init.sh: Specify the sed tool depending on the OS
	* build-all.sh: Add --sed-tool option.  Change sed to ${SED}, change
	uname -o to uname -s, -s is more portable than -o 
	* build-elf32.sh: Change sed to ${SED}
	* build-uclibc.sh: Change sed to ${SED}
	* rel-rpaths.sh: Change sed to ${SED}
	* run-uclibc-tests.sh: Change sed to ${SED}

2013-12-09  Anton Kolesov  <anton.kolesov@synopsys.com>

	* dejagnu/nsim-extra.exp: Switch to new nsimdrv application instead of
	obsolete nsim_gdb.

2013-12-06  Anton Kolesov  <anton.kolesov@synopsys.com>

	* run-tests.sh: Make error message more clear when invalid command
	line argument is specified.

2013-12-06  Anton Kolesov  <anton.kolesov@synopsys.com>

	* dejagnu/baseboards/arc-nsim.exp: Use bigger stack section.

2013-12-06  Anton Kolesov  <anton.kolesov@synopsys.com>

	* symlink-dirs.sh: Remove faulty script.
	* symlink-all.sh: Revert previous commit.

2013-11-29  Joern Rennecke  <joern.rennecke@embecosm.com>

	* symlink-dirs.sh: New script.
	* symlink-all.sh: Use it.

2013-11-27  Simon Cook  <simon.cook@embecosm.com>

	* windows-installer/ChangeLog: Describe steps to cross-compile ELF32
	toolchain for Windows.

2013-11-20  Anton Kolesov  <anton.kolesov@synopsys.com>

	* extras/opella-xd/arcem-cpu.xml: New file. Contains AUX registers
	description for the Ashling gdbserver for the Opella-XD probe.

2013-11-18  Anton Kolesov  <anton.kolesov@synopsys.com>

	* build-elf32.sh, build-uclibc.sh: If PDF docs build failed, suggest
	user to read Prerequisites section of documentation or use option
	--no-pdf.

2013-11-12  Anton Kolesov  <anton.kolesov@synopsys.com>

	* build-all.sh: Fix reference to section from readme, invalid name has
	been used. Also remove debug echo left from development.
