@@ -1,0 +1,4 @@
+#!/bin/sh
+mdb -nsim -noproject -nooptions -run $*
+RET=$?
+echo "*** EXIT code ${RET}"
